syntax = "proto3";

package user_service;

option go_package = "github.com/jakkapat-chongsuwat/go-microservice/proto/user_service;user_service";

message CreateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID(GetUserRequest) returns (GetUserResponse);
}
