syntax = "proto3";

option go_package = "github.com/jakkapat/grpc-microservice/proto/helloworld;helloworld";

package helloworld;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}
